iptables.conf
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

### Established
-I INPUT 1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-I OUTPUT 1 -m state --state RELATED,ESTABLISHED -j ACCEPT

### Local
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

### SSH
### -A INPUT -p tcp -s 10.0.0.10/32 --dport 22 -j ACCEPT
### -A INPUT -p tcp -m tcp -m mac --mac-source "AB:CD:EF:GH:11:22" --dport 22 -j ACCEPT -m comment --comment "pc.lan"
### -A INPUT -p tcp -m multiport --dports 22,23,25 -j ACCEPT -m comment --comment "Multiports.lan"

### OUTBOUND ###
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p udp --dport 67:68 -j ACCEPT
-A OUTPUT -p tcp --dport 25 -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp --dport 443 -m state --state NEW -j ACCEPT
